# oc_download

./: .releaserc.json  Dockerfile  README.md  conf.json  docker_version.txt  download_oc.py  download_oc_main_backup.py  gunicorn.conf.py  pyproject.toml  sync_static.py
.github/workflows/: docker-build.yml  semantic-release.yml
html-template/: download.html
src/: wl.py
static/css/: download.css
