[project]
name = "oc-download"
version = "0.1.0"
description = "OpenCitations download service - Web portal for downloading OpenCitations datasets"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.1",
    "gevent>=25.9.1",
    "gitpython>=3.1.45",
    "gunicorn>=23.0.0",
    "isodate>=0.7.2",
    "lxml>=6.0.2",
    "rdflib>=7.4.0",
    "rdflib-jsonld>=0.6.2",
    "requests>=2.32.5",
    "sparqlwrapper>=2.0.0",
    "web-py>=0.62",
    "zope-event>=6.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.2",
    "python-lsp-server>=1.13.1",
    "yapf>=0.43.0",
]
